--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {
-    "json-server": "^0.17.4"
+  "devDependencies": {
+    "json-server": "^0.17.4",
+
+    "axios": "^1.7.7"
   }
 }
