--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
-    "json-server": "^0.17.4",
-
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "json-server": "^0.17.4"
   }
 }
